added the Erlang and Elixir submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "NumericalMethods"]
 	path = NumericalMethods
 	url = git@github.com:Noarkhh/NumericalMethods.git
+[submodule "ErlangAndElixir"]
+	path = ErlangAndElixir
+	url = git@github.com:Noarkhh/ErlangAndElixir.git
